[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
simple_logger = "4.3.3"
sha2 = "0.10.8"
blake3 = "1.5.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.flamegraph]
debug = true # for profiling
inherits = "release"
